--- a/login.html
+++ b/login.html
@@ -7,12 +7,14 @@
         <link rel="stylesheet" href="css/login.css" />
     </head>
     <body>
-        <center>
+        <div style="display:flex;justify-content:center;align-items:center;">
+		<div>
             <img src="img/admin_big_pp.png"></img> <br />
             <b style="font-size: 24px">Witamy w ZabijmnieAdmin!</b> <br /> <br />
             Login: <input type="text" id="username" placeholder="ProgramistaZPolski"></input> <br />
             Haslo: <input type="password" id="password" placeholder="12345"></input> <br /> <br />
             <button id="login">No loguj</button>
-        </center>
+			</div>
+        </div>
     </body>
 </html>
